# sampledex_daw

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: windows-manual-build.yml
BeatMakerApp/: CMakeLists.txt  run_beatmaker.sh
BeatMakerApp/BundledSynths/SampledexNovaSynth/: CMakeLists.txt
BeatMakerApp/BundledSynths/SampledexNovaSynth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
BeatMakerApp/Source/BeatMakerNoRecord/: BeatMakerNoRecord.cpp  BeatMakerNoRecord.h  CMakeLists.txt  DawScaffold.cpp  DawScaffold.h
BeatMakerApp/Source/BeatMakerNoRecord/Core/: BeatMakerNoRecordCore.cpp
BeatMakerApp/Source/BeatMakerNoRecord/Editing/: BeatMakerNoRecordEditing.cpp
BeatMakerApp/Source/BeatMakerNoRecord/Panels/: ArrangementPanel.cpp  FxPanel.cpp  MidiPanel.cpp  MixerPanel.cpp  PianoPanel.cpp  SessionHeaderPanel.cpp  SharedLayoutSystem.cpp  SharedLayoutSystem.h  TrackPanel.cpp
BeatMakerApp/Source/BeatMakerNoRecord/Tests/: UiRegressionTests.cpp
BeatMakerApp/Source/BeatMakerNoRecord/UI/: BeatMakerNoRecordCommandRouting.cpp  BeatMakerNoRecordCommandRouting.h  BeatMakerNoRecordUI.cpp
BeatMakerApp/Source/common/: Components.cpp  Components.h  Utilities.h
scripts/: first_build_windows.bat  first_build_windows.ps1
